Fix dark mode modal background by preventing body/background override in modal sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,6 +183,7 @@ main {
 body.dark .modal-content {
     background-color: #212529;
     background-image: url(../backgrounds/dark-background.png);
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
     border: 2px solid white;
@@ -192,8 +193,8 @@ body.dark .modal-content {
 body.dark .modal-header,
 body.dark .modal-body,
 body.dark .modal-footer {
-    background-color: transparent;
-    color: white;
+  background-color: inherit;
+  color: white;
 }
 
 /* Setup Form Inside Modal */
